--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,4 +5,6 @@
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_data" android:title="@string/action_data"
+        android:orderInCategory="100" app:showAsAction="never" />
 </menu>
